libraries + module resources working well +  assets window

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -8,10 +8,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Console]
-Pos=0,542
-Size=1220,178
+Pos=654,542
+Size=566,178
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000A,0
 
 [Window][SceneTest]
 Pos=101,19
@@ -53,6 +53,12 @@ Size=297,521
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][Assets]
+Pos=0,542
+Size=652,178
+Collapsed=0
+DockId=0x00000009,0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1220,701 Split=Y Selected=0x3D2516CD
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1220,521 Split=X
@@ -62,5 +68,7 @@ DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1220,701 Split=Y
         DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=529,521 CentralNode=1 Selected=0x3D2516CD
         DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=297,521 Selected=0x26816F31
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=289,774 Selected=0xE7039252
-  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=1220,178 Selected=0x49278EEE
+  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=1220,178 Split=X Selected=0x49278EEE
+    DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=652,178 Selected=0x26CE0345
+    DockNode      ID=0x0000000A Parent=0x00000007 SizeRef=566,178 Selected=0x49278EEE
 
