--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -8,37 +8,37 @@ Size=400,400
 Collapsed=0
 
 [Window][Console]
-Pos=770,615
-Size=766,178
+Pos=612,542
+Size=608,178
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][SceneTest]
 Pos=101,19
-Size=845,594
+Size=529,521
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1536,774
+Size=1220,701
 Collapsed=0
 
 [Window][Inspector]
-Pos=1247,19
-Size=289,594
+Pos=931,19
+Size=289,521
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Hierarchy]
 Pos=0,19
-Size=99,594
+Size=99,521
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Configuration]
-Pos=1247,19
-Size=289,594
+Pos=931,19
+Size=289,521
 Collapsed=0
 DockId=0x00000004,1
 
@@ -48,26 +48,26 @@ Size=226,181
 Collapsed=0
 
 [Window][Game]
-Pos=948,19
-Size=297,594
+Pos=632,19
+Size=297,521
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Assets]
-Pos=0,615
-Size=768,178
+Pos=0,542
+Size=610,178
 Collapsed=0
 DockId=0x00000009,0
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1536,774 Split=Y Selected=0x3D2516CD
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1220,701 Split=Y Selected=0x3D2516CD
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1220,521 Split=X
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=929,774 Split=X
       DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=99,521 Selected=0x29EABFBD
       DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=828,521 Split=X Selected=0x3D2516CD
         DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=529,521 CentralNode=1 Selected=0x3D2516CD
         DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=297,521 Selected=0x26816F31
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=289,774 Selected=0xE7039252
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=289,774 Selected=0x09A1ED00
   DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=1220,178 Split=X Selected=0x26CE0345
     DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=610,178 Selected=0x26CE0345
     DockNode      ID=0x0000000A Parent=0x00000007 SizeRef=608,178 Selected=0x49278EEE
