Revert "trying to fix buffers"
This reverts commit 021b93bd3f19ae54ce1455af458d47d7d5b08c77.

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -15,7 +15,7 @@ DockId=0x0000000A,0
 
 [Window][SceneTest]
 Pos=206,19
-Size=600,521
+Size=659,521
 Collapsed=0
 DockId=0x00000002,0
 
@@ -25,8 +25,8 @@ Size=1220,701
 Collapsed=0
 
 [Window][Inspector]
-Pos=914,19
-Size=306,521
+Pos=929,19
+Size=291,521
 Collapsed=0
 DockId=0x00000004,0
 
@@ -37,8 +37,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Configuration]
-Pos=914,19
-Size=306,521
+Pos=929,19
+Size=291,521
 Collapsed=0
 DockId=0x00000004,1
 
@@ -48,8 +48,8 @@ Size=226,181
 Collapsed=0
 
 [Window][Game]
-Pos=808,19
-Size=104,521
+Pos=867,19
+Size=60,521
 Collapsed=0
 DockId=0x00000008,0
 
@@ -62,12 +62,12 @@ DockId=0x00000009,0
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1220,701 Split=Y Selected=0x3D2516CD
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1220,521 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=912,774 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=927,774 Split=X
       DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=204,521 Selected=0x29EABFBD
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=706,521 Split=X Selected=0x3D2516CD
-        DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=600,521 CentralNode=1 Selected=0x3D2516CD
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=104,521 Selected=0x26816F31
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=306,774 Selected=0x09A1ED00
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=721,521 Split=X Selected=0x3D2516CD
+        DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=659,521 CentralNode=1 Selected=0x3D2516CD
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=60,521 Selected=0x26816F31
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=291,774 Selected=0xE7039252
   DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=1220,178 Split=X Selected=0x26CE0345
     DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=610,178 Selected=0x26CE0345
     DockNode      ID=0x0000000A Parent=0x00000007 SizeRef=608,178 Selected=0x49278EEE
