--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -67,7 +67,7 @@ DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1220,701 Split=Y
       DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=553,521 Split=X Selected=0x3D2516CD
         DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=519,521 CentralNode=1 Selected=0x3D2516CD
         DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=32,521 Selected=0x26816F31
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=306,774 Selected=0x09A1ED00
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=306,774 Selected=0xE7039252
   DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=1220,178 Split=X Selected=0x26CE0345
     DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=610,178 Selected=0x26CE0345
     DockNode      ID=0x0000000A Parent=0x00000007 SizeRef=608,178 Selected=0x49278EEE
