--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,3 @@
-
+theme: jekyll-theme-minimal
+title: Monster-Engine
+description: Welcome to Monster Engine, a game engime full developed by Gerard Josep Ramon Catasus
