--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: beautiful-jekyll-theme
 title: Monster-Engine
 description: Welcome to Monster Engine, a game engime full developed by Gerard Josep Ramon Catasus
