--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
-theme: beautiful-jekyll-theme
+theme: jekyll-theme-minimal
 title: Monster-Engine
+email: gerhoquei8@gmail.com
 description: Welcome to Monster Engine, a game engime full developed by Gerard Josep Ramon Catasus
