--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-primer
 title: Monster-Engine
 email: gerhoquei8@gmail.com
 description: Welcome to Monster Engine, a game engime full developed by Gerard Josep Ramon Catasus
