--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,7 @@
 theme: jekyll-theme-tactile
 email: gerhoquei8@gmail.com
 title: Monster-Engine
+logo: https://github.com/kramtron/Monster-Engine/blob/main/img/MeJoke.jpg
+
 
 description: Welcome to Monster Engine, a game engime full developed by Gerard Josep Ramon Catasus
