--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -8,37 +8,37 @@ Size=400,400
 Collapsed=0
 
 [Window][Console]
-Pos=595,491
-Size=591,178
+Pos=612,434
+Size=608,286
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][SceneTest]
-Pos=294,19
-Size=550,470
+Pos=135,19
+Size=492,413
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1186,650
+Size=1220,701
 Collapsed=0
 
 [Window][Inspector]
-Pos=880,19
-Size=306,470
+Pos=1085,19
+Size=135,413
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Hierarchy]
 Pos=0,19
-Size=292,470
+Size=133,413
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Configuration]
-Pos=880,19
-Size=306,470
+Pos=1085,19
+Size=135,413
 Collapsed=0
 DockId=0x00000004,1
 
@@ -48,27 +48,27 @@ Size=226,181
 Collapsed=0
 
 [Window][Game]
-Pos=846,19
-Size=32,470
+Pos=629,19
+Size=454,413
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Assets]
-Pos=0,491
-Size=593,178
+Pos=0,434
+Size=610,286
 Collapsed=0
 DockId=0x00000009,0
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1186,650 Split=Y Selected=0x3D2516CD
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1220,521 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=912,774 Split=X
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=292,521 Selected=0x29EABFBD
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=584,521 Split=X Selected=0x3D2516CD
-        DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=550,521 CentralNode=1 Selected=0x3D2516CD
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=32,521 Selected=0x26816F31
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=306,774 Selected=0xE7039252
-  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=1220,178 Split=X Selected=0x26CE0345
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1220,701 Split=Y Selected=0x3D2516CD
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1220,413 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=1083,774 Split=X
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=133,521 Selected=0x29EABFBD
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=948,521 Split=X Selected=0x3D2516CD
+        DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=492,521 CentralNode=1 Selected=0x3D2516CD
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=454,521 Selected=0x26816F31
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=135,774 Selected=0x09A1ED00
+  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=1220,286 Split=X Selected=0x26CE0345
     DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=610,178 Selected=0x26CE0345
     DockNode      ID=0x0000000A Parent=0x00000007 SizeRef=608,178 Selected=0x49278EEE
 
